[package]
name = "MapTSServer"
version = "0.1.0"
authors = ["Romain Allée <romain.allee@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.8"}
simplelog = { version = "0.7.5"}
rand = { version = "0.7.3"}
flatbuffers = "*"